apps/knowledge-base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowledge-base
  namespace: knowledge-base
spec:
  replicas: 2
  selector:
    matchLabels:
      app: knowledge-base
  template:
    metadata:
      labels:
        app: knowledge-base
    spec:
      containers:
        - name: knowledge-base
          image: monnierant/knowledge-base:0.0.1
          ports:
            - containerPort: 80
